sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:5: error: not found: value gCrepeF
  for(x<-0 to N-1){gCrepeF(N-x)}} 
                   ^