sort.pancake.BasicPancake.scala.code
def solve() {
	val N=getTaillePile()

  for(x<-0 to N-1){gCrepeF(N-x)}}